--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-validator": "^5.2.0",
-    "find-exec": "^1.0.0",
+    "find-exec": "github:felipewer/find-exec#v1.0.1",
     "helmet": "^3.12.1",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-http-bearer": "^1.0.1",
-    "request": "^2.80.0"
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "jest": "^22.4.3",
